[package]
name = "hana_prefab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", features = ["filesystem_watcher"] }
ron = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }
