[package]
name = "hana_prefab"
version = "0.1.0"
edition = "2021"
description = "Hana prefab is a plugin for bevy that allows you to store level and other data in rooms using prefabs created in code."
license = "MIT OR Apache-2.0"
repository = "https://github.com/HaNaK0/hana_prefab"
readme = "readme.md"
exclude = ["assets/*", "examples/*", ".github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13" }
ron = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.57"

[dev-dependencies]
bevy = { version = "0.13", features = ["file_watcher"] }
